--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.11.2", features = ["dynamic_linking"] } 
+bevy = { version = "0.11.2", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.19"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
